# fortnet

./: .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS.rst  CITATION.cff  CMakeLists.txt  CONTRIBUTING.rst  INSTALL.rst  LICENSE  README.rst  config.cmake
.github/workflows/: build.yml
cmake/: FortnetUtils.cmake
doc/fortnet/ford/: fortnet.md
doc/recipes/: README.rst  requirements.txt
doc/recipes/docs/: bibliography.rst  conf.py  index.rst  introduction.rst  licence.rst  refs.bib
doc/recipes/docs/_figures/acsf/: plot_g2.py
doc/recipes/docs/_figures/basics/firstpredict/: plot_results.py
doc/recipes/docs/_figures/transfer/: plot_transfer.py
doc/recipes/docs/acsf/: index.rst
doc/recipes/docs/analysis/: derivatives.rst  index.rst
doc/recipes/docs/basics/: extfeatures.rst  firstpredict.rst  firsttrain.rst  index.rst
doc/recipes/docs/bpnn/: index.rst
doc/recipes/docs/fnetdata/: index.rst
doc/recipes/docs/fortformat/: fnetdata.rst  fnetout.rst  index.rst
doc/recipes/docs/interfaces/: index.rst
doc/recipes/docs/interfaces/ase/: index.rst
doc/recipes/docs/interfaces/ase/fileio/: fileio.rst
doc/recipes/docs/interfaces/ase/sockets/: sockets.rst
doc/recipes/docs/interfaces/sockets/: index.rst
doc/recipes/docs/loss/: index.rst
doc/recipes/docs/optimizer/: index.rst
doc/recipes/docs/transfer/: index.rst
prog/: CMakeLists.txt
prog/fortnet/: CMakeLists.txt
prog/fortnet/include/: common.fypp
prog/fortnet/lib_analysis/: CMakeLists.txt  forces.F90
prog/fortnet/lib_common/: CMakeLists.txt  loss.F90  nestedtypes.F90  parallel.F90  random.F90  workarounds.F90
prog/fortnet/lib_descriptors/: CMakeLists.txt  acsf.F90  acsf_derivs.F90
prog/fortnet/lib_dftbp/: CMakeLists.txt  LICENSE  blas.F90  blasroutines.F90  charmanip.F90  dynneighlist.F90  globalenv.F90  lbfgs.F90  logger.F90  mpifx.F90  optarg.F90  typegeometry.F90
prog/fortnet/lib_extlibs/: CMakeLists.txt  dftbp.F90  fsockets.F90  mpifx.F90
prog/fortnet/lib_fortnet/: CMakeLists.txt  initprogram.F90
prog/fortnet/lib_hdf5fx/: CMakeLists.txt  hdf5fx.F90
prog/fortnet/lib_interfacing/: CMakeLists.txt  dftbplus.F90
prog/fortnet/lib_io/: CMakeLists.txt  fnetdata.F90  fnetout.F90  ipisocket.F90  iterout.F90  netstat.F90  precond.F90
prog/fortnet/lib_nn/: CMakeLists.txt  bpnn.F90  layer.F90  network.F90  transfer.F90
prog/fortnet/lib_optimizers/: CMakeLists.txt  optimizers.F90
prog/fortnet/lib_types/: CMakeLists.txt  features.F90
prog/fortnet/lib_utils/: CMakeLists.txt  intmanip.F90
prog/fortnet/prg_fnet/: CMakeLists.txt  fortnet.F90
prog/fortnet/prg_fnetdftbp/: CMakeLists.txt  fnetdftbp.F90
sys/: generic.cmake  gnu.cmake  intel.cmake  nag.cmake
test/: CMakeLists.txt
test/prog/fortnet/: CMakeLists.txt  tests
test/prog/fortnet/analysis/derivatives/multiTargets/: _fnetout.hdf5  fortnet_in.hsd
test/prog/fortnet/analysis/derivatives/singleTarget/: _fnetout.hdf5  fortnet_in.hsd
test/prog/fortnet/datasets/: fnetdata_h2_c_multiGlobal_atomicWeights.hdf5  fnetdata_h2_c_singleGlobal_atomicWeights.hdf5  fnetdata_h2_s_multiGlobal.hdf5  fnetdata_hcno_c_bothtargets.hdf5  fnetdata_o_c_atomic.hdf5  fnetdata_o_c_atomic_weights.hdf5  fnetdata_o_c_global.hdf5  fnetdata_oh_c_atomic.hdf5  fnetdata_oh_c_atomic_atomicWeights.hdf5  fnetdata_oh_c_atomic_weights.hdf5  fnetdata_oh_c_global.hdf5  fnetdata_si_s_global.hdf5  fnetdata_si_s_global_weights.hdf5  fnetdata_sic_s_global.hdf5  fnetdata_sic_s_global_atomicNums.hdf5  fnetdata_sic_s_global_weights.hdf5  fnetdata_sic_s_multiGlobal_atomicNums.hdf5  gen_chg_dataset.py  gen_totens.py  inpaths  inpaths_dft
test/prog/fortnet/input/acsf/auto/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/acsf/autoandmanual/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/acsf/manual/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/acsf/multiauto/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/arctan/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/bent/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/gaussian/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/heaviside/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/linear/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/lrelu/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/relu/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/sigmoid/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/softplus/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/activation/tanh/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/atomids/: _Si.net  _acsf.out  fortnet_in.hsd
test/prog/fortnet/input/atomids/speciesResolved/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/atomids/speciesUnresolved/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/input/contiguous/atomicTargets/: _Si.net  fnetdata.xml  fortnet_in.hsd
test/prog/fortnet/input/contiguous/globalTargets/: _Si.net  fnetvdata.xml  (+1 more)
test/prog/fortnet/input/contiguousmix/: fortnet_in.hsd  training_data
test/prog/fortnet/input/itertraj/: _fortnet.hdf5  fortnet_in.hsd
test/prog/fortnet/integration/cmake/: CMakeLists.txt  runtest.sh
test/prog/fortnet/integration/pkgconfig/: runtest.sh  test_build.f90
test/prog/fortnet/loss/mae/: fortnet_in.hsd
test/prog/fortnet/loss/mape/: _C.net  _Si.net  fortnet_in.hsd
test/prog/fortnet/loss/mse/: _C.net  _Si.net  _fortnet.hdf5  fnetdata_sic_bulk.hdf5  fortnet_in.hsd
test/prog/fortnet/loss/rms/: _Si.net  fortnet_in.hsd
test/prog/fortnet/sockets/: postrun.sh  sockettools.py  testrun.sh
test/prog/fortnet/sockets/H2O_cluster/: H2O_cluster.gen  fortnet_in.hsd  prerun.py
test/prog/fortnet/sockets/H2O_ice/: H2O_ice.gen  fortnet_in.hsd  prerun.py
tools/: CMakeLists.txt
tools/fortformat/: README.rst  setup.py
tools/fortformat/src/: __init__.py  fortformat.py
utils/export/: fortnet-config.cmake.in  fortnet.pc.in
utils/test/: travis-extbuild.sh  travis-integration.sh  travis-regression.sh
(+770 files in other folders)
